# SunLight

./: .clang-format  .gitignore  CMakeLists.txt  README.md
CMake/: HelperFunctions.cmake
Source/: CMakeLists.txt
Source/Editor/: CMakeLists.txt  Main.cpp
Source/Lib/: CMakeLists.txt
Source/Lib/SL/: Defines.hpp  Math.hpp  SunLight.cpp  SunLight.hpp  ThirdParty.hpp
Tests/: CMakeLists.txt
